--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,11 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Distributed Evolutionary Algorithm</title>
-
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
-
-    <script type="text/javascript" src='js/Chart.min.js'></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
     <style>
 
@@ -30,334 +14,15 @@
             padding-bottom: 20px;
         }
 
-        .worker_line
-        {
-            height: 150px;
-            padding-right: 10px;
-
-        }
-
-
     </style>
 
 </head>
 <body>
 
-<div class="container">
-    <div class="header clearfix">
-        <nav>
-            <ul class="nav nav-pills pull-right">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
+  <h1>An experiment in distributed evolutionary computation</h1>
 
-                <li role="presentation"><a href="/">Reload Page</a></li>
-                <li role="presentation"><a href="https://github.com/mariosky/splash-volunteer">Fork in Github</a></li>
-            </ul>
-        </nav>
-        <h3 class="text-muted">An experiment in distributed evolutionary computation
-            <span id='ips' class="label label-info">0 User(s) Collaborating</span>
-        </h3>
-    </div>
-
-    <h1 class="page-header">How are we doing? </h1>
-    <!---->
-    <!-- WORKER 1-->
-    <!---->
-    <div class="row">
-
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-heading"> <i class="fa fa-cog"></i> Worker <span id='worker_status' class="label label-info"> status </span> </div>
-                <div class="panel-body">
-
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h4>Worker information</h4>
-                            <ul class="list-group">
-                                <li class="list-group-item"> Population size <span  id="worker_population_size" class="badge"></span> </li>
-                                <li class="list-group-item"> Current generation  <span id="worker_current_generation" class="badge"></span> </li>
-                                <li class="list-group-item"> Best fitness   <span id="worker_current_best" class="badge"></span> </li>
-                                <li class="list-group-item"> Number of solutions found  <span id="number_of_solutions_found" class="badge"> 0 </span> </li>
-
-                            </ul>
-                        </div>
-
-                        <div class="col-md-4">
-                            <h4>Fitness</h4>
-                            <canvas id="fitness" class="worker_line" ></canvas>
-                        </div>
-
-
-                        <div class="col-md-4">
-                            <h4>Best Chromosome</h4>
-                            <canvas id="chromosome" class="worker_line" ></canvas>
-                        </div>
-
-
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2">
-                            <a class="btn btn-default" href="/"  target="_blank" role="button">Create a new worker window</a>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-
-    </div>
-
-
-
-
-    <div class="row">
-        <div class="col-md-8">
-            <div class="panel panel-default">
-                <div class="panel-heading"> <h4 id="population-w2"> About This </h4> </div>
-                <div class="panel-body">
-                    <p>This is an experiment in distributed evolutionary
-                        computation where you're contributing by just visiting this
-                        page. You can read about it
-                        in <a href='http://arxiv.org/abs/1503.06424'>this
-                            paper</a>. Your browser will be evaluating a population
-                        of <em>chromosomes</em>, <em>mutating</em> and mixing them
-                        to create a new population in
-                        an <a href='https://en.wikipedia.org/wiki/Evolutionary_algorithm'>evolutionary
-                            algorithm</a> that sends every <code>n</code>
-                        generations the best chromosome to the server, receiving a
-                        random one. Each row above represents a worker process showing the best chromosome so
-                        far in shades of gray. The best one will be all black; the
-                        algorithm of the worker will stop when it finds it. You can press Re-start in any moment to
-                        replace a worker with a new one.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-
-            <div class="panel panel-default">
-                <div class="panel-heading"> <h4><i class="fa fa-cog"> </i> Get the data</h4> </div>
-                <div class="panel-body">
-                    <p>Processed and raw data will
-                        be <a href='https://github.com/mariosky/splash-volunteer/tree/data'>available
-                            from GitHub</a>. Please
-                        use <a href='https://github.com/mariosky/splash-volunteer/issues'>the
-                            issues section for suggestions and questions, as well as
-                            feature requests.</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-    <footer class="footer">
-        <div class="container">
-
-            <p  id="footer1" class='text-centered text-muted'>Grab the code and data in <a href='https://github.com/mariosky/splash-volunteer'>GitHub</a>. This is free software under the <a href='http://www.gnu.org/licenses/'>Affero GPL license</a>.</p>
-
-
-        </div>
-    </footer>
-
-</div>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script>
-
-
-
-
-    var fitness = document.getElementById('fitness').getContext('2d');
-    var chromosome = document.getElementById('chromosome').getContext('2d');
-
-    // Chart data
-    fitness_data = {
-        labels : [],
-        datasets : [
-            {
-                fillColor : "rgba(172,194,132,0.4)",
-                strokeColor : "#ACC26D",
-                pointColor : "#fff",
-                pointStrokeColor : "#9DB86D",
-                data : []
-            }
-        ]
-    };
-
-    fitness_chart = new Chart(fitness).Line( fitness_data, {  responsive: false,  animation: false ,  maintainAspectRatio: true});
-
-    chromosome_data ={
-        labels : Array.apply(null, new Array(160)).map(String.prototype.valueOf,""),
-        datasets : [
-            {
-                fillColor:  "rgba(0,0,0,0.8)",
-                strokeColor: "rgba(0,0,0,0.8)",
-                data : Array.apply(null, new Array(160)).map(Number.prototype.valueOf,0)
-            }
-        ]
-    };
-
-    chromosome_chart = new Chart(chromosome).Bar(chromosome_data,
-
-            {
-                scaleBeginAtZero : true,scaleShowGridLines : false,scaleShowHorizontalLines: false,
-                scaleShowVerticalLines: true, barShowStroke : false, barStrokeWidth : 0, barValueSpacing : 0,
-                barDatasetSpacing : 0,responsive: false, animation: false ,
-                maintainAspectRatio: true
-
-            });
-
-
-
-
-
-
-    $( document ).ready(function() {
-
-
-
-        setup_worker();
-    });
-
-
-
-
-
-
-
-
-
-    var terminate_worker  = function()
-    {
-        if(typeof(Worker) !== "undefined") {
-            if(typeof(worker) != "undefined") {
-                worker.terminate();
-            }
-        }
-        document.getElementById('worker_status').textContent='Finished';
-
-    };
-
-
-    var setup_worker = function() {
-
-
-        if (typeof(Worker) !== "undefined") {
-            if (typeof(worker) == "undefined") {
-                worker = new Worker('js/trapWorker.js');
-
-            }
-        }
-        worker.uuid = generateUUID();
-        worker.addEventListener('message', function (e) {
-
-            if (e.data.status !== undefined) {
-
-
-                switch (e.data.status) {
-                    case 'created':
-                        document.getElementById('worker_status').textContent = 'Created';
-                        break;
-                    case 'starting':
-                        document.getElementById('worker_status').textContent = 'Starting';
-                        break;
-                    case 'experiment_not_found':
-                        document.getElementById('worker_status').textContent = 'Experiment Not Found';
-                        break;
-
-                    case 'working':
-                        document.getElementById('worker_status').textContent = 'Working';
-                        if (fitness_data.labels.length > 10) {
-                            fitness_chart.removeData();
-                        }
-
-                        fitness_chart.addData([e.data.fitness], e.data.generation_count);
-                        fitness_chart.update();
-
-                        for (var i = 0; i < e.data.best.length; i++) {
-                            chromosome_chart.datasets[0].bars[i].value = e.data.best[i];
-
-                        }
-                        chromosome_chart.update();
-                        document.getElementById('worker_current_generation').textContent = e.data.generation_count.toString();
-                        document.getElementById('worker_current_best').textContent = e.data.fitness;
-                        document.getElementById('ips').textContent = e.data.ips + ' User(s) Collaborating';
-                        break;
-
-                    case 'finished':
-                        for (var i = 0; i < e.data.best.length; i++) {
-                            chromosome_chart.datasets[0].bars[i].value = e.data.best[i];
-
-                        }
-                        chromosome_chart.update();
-                        document.getElementById('worker_current_generation').textContent = e.data.generation_count.toString();
-                        document.getElementById('worker_current_best').textContent = e.data.fitness;
-                        fitness_chart.addData([e.data.fitness], e.data.generation_count);
-                        fitness_chart.update();
-                        document.getElementById('worker_status').textContent = 'Finished';
-                        document.getElementById('number_of_solutions_found').textContent = parseInt(document.getElementById('number_of_solutions_found').textContent) + 1;
-
-                }
-
-            }
-
-        }, false);
-
-
-        var config = {
-
-            population_size: get_random_population(128, 256),
-            period: 100,
-            traps: 40,
-            trap_len: 4,
-            trap_b: 2
-        };
-
-
-        // Random poulatio between min and max
-        //
-
-        function get_random_population(population_min, population_max) {
-
-            pop_size = Math.floor((Math.random() * (population_max - population_min)) + population_min);
-            //population has to be an even number?
-            if (pop_size % 2 == 1) {
-                pop_size++;
-            }
-            return pop_size;
-
-        }
-
-        document.getElementById('worker_population_size').textContent = config.population_size;
-        config.worker_uuid = worker.uuid;
-
-        worker.postMessage({'cmd': 'start', 'config': config});
-        // Solo start?
-        worker.postMessage({'cmd': 'evolve'});
-
-
-        function generateUUID() {
-            var d = new Date().getTime();
-            var uuid = 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
-                var r = (d + Math.random() * 16) % 16 | 0;
-                d = Math.floor(d / 16);
-                return (c == 'x' ? r : (r & 0x3 | 0x8)).toString(16);
-            });
-            return uuid;
-        }
-
-    }
-
-</script>
-
-
-
+  <p>Go to <a href='http://github.com/JJ/cloudy-ga-server'>To check
+    the source</a>.</p>
 
 
 </body>
