--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
-	<head>
+  <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>People as computing device.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/black.css">
@@ -20,18 +20,23 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+  </head>
+  <body>
+    <div class="reveal">
+      <div class="slides">
+	<section>
+	  <h2><code>people_as_computing_nodes.js</code></h2>
+	<h3><code>@jjmerelo</code>, <code><a href='https://www.npmjs.com/~jjmerelo'>https://www.npmjs.com/~jjmerelo</a></code></h3>
+	<h1><a href='http://ugr.university'>University of Granada, Spain</a></h1>
+	</section>
+				  
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+      </div>
+    </div>
 
+    <script src="lib/js/head.min.js"></script>
+    <script src="js/reveal.js"></script>
+    
 		<script>
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
