--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<title>People as computing device.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/moon.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -26,8 +26,18 @@
       <div class="slides">
 	<section>
 	  <h2><code>people_as_computing_nodes.js</code></h2>
-	<h3><code>@jjmerelo</code>, <code><a href='https://www.npmjs.com/~jjmerelo'>https://www.npmjs.com/~jjmerelo</a></code></h3>
-	<h1><a href='http://ugr.university'>University of Granada, Spain</a></h1>
+	  <h1><code>@jjmerelo</code></h1>
+	</section>
+	
+	<section><h1>A. K. A.</h1>
+	  <h3><code><a href='https://www.npmjs.com/~jjmerelo'>https://www.npmjs.com/~jjmerelo</a></code></h3>
+	  <h1><a href='http://ugr.university'>University of Granada, Spain</a></h1>
+	</section>
+
+	<section>
+	  <h1>Visit ⇒</h1>
+	  <h2><code><a href='http://gecco2016-jmerelo.rhcloud.com/'>http://gecco2016-jmerelo.rhcloud.com/</a></code></h2>
+	  <h2>Short ⇒<code>goo.gl/LS66vj</code></h2>
 	</section>
 				  
 
