Updates layout and style

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 	</section>
 	
 	<section><h1>A. K. A.</h1>
-	  <h3><code><a href='https://www.npmjs.com/~jjmerelo'>https://www.npmjs.com/~jjmerelo</a></code></h3>
+	  <h3><code><a href='https://www.npmjs.com/~jjmerelo'>npmjs.com/~jjmerelo</a></code></h3>
 	  <h1><a href='http://ugr.university'>University of Granada, Spain</a></h1>
 	</section>
 
