--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
 	
 	<section><h1>A. K. A.</h1>
 	  <h3><code><a href='https://www.npmjs.com/~jjmerelo'>npmjs.com/~jjmerelo</a></code></h3>
+	  
+	  <h2 class='fragment'><code><a href='https://github.com/JJ'>github.com/JJ</a></code></h3>
+
 	  <h1><a href='http://ugr.university'>University of Granada, Spain</a></h1>
 	</section>
 
