--- a/public/index.html
+++ b/public/index.html
@@ -56,8 +56,22 @@
 	  <h2><code><a href='http://gecco2016-jmerelo.rhcloud.com/'>http://gecco2016-jmerelo.rhcloud.com/</a></code></h2>
 	  <h2>Short ⇒<code>goo.gl/LS66vj</code></h2>
 	</section>
-				  
 
+	<section>
+	  <section>
+	    <h1>Computing cycles...</h1>
+	  </section>
+
+	  <section data-background='https://farm4.staticflickr.com/3879/14752471789_8803248026_k_d.jpg' alt='zombies asking for more'>
+	    <h1>We all need more... </h1>
+	  </section>
+
+	</section>
+
+	<section><h2>Credits</h2>
+	  <ul class='credits'>
+	    <li><a href='https://www.flickr.com/photos/elena_ri/14752471789/'>Zombies by Elena_Ri</a></li>
+	  </ul>
       </div>
     </div>
 
