--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,16 @@
 		<title>People as computing device.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/extra.css">
 		<link rel="stylesheet" href="css/theme/moon.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-		    <script
-		       src="https://code.jquery.com/jquery-2.2.4.min.js"
-		       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-		       crossorigin="anonymous"></script>
+		<script
+		   src="https://code.jquery.com/jquery-2.2.4.min.js"
+		   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+		   crossorigin="anonymous"></script>
 
     <!-- for Chart -->
     <script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js'></script>
