--- a/public/index.html
+++ b/public/index.html
@@ -67,11 +67,16 @@
 	    <h1>We all need more... </h1>
 	  </section>
 
+	  <section data-background='https://farm3.staticflickr.com/2503/3792906411_d3f8762924_b_d.jpg' alt='Brains'>
+	    <h1>We all have plenty...</h1>
+	  </section>
+
 	</section>
 
 	<section><h2>Credits</h2>
 	  <ul class='credits'>
 	    <li><a href='https://www.flickr.com/photos/elena_ri/14752471789/'>Zombies by Elena_Ri</a></li>
+	    <li><a href='https://www.flickr.com/photos/neilconway/3792906411/'>Brains by Neil Conway</a></li>
 	  </ul>
       </div>
     </div>
