--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,10 @@
 
 	</section>
 
+	<section >
+	  <!-- zooms graph -->
+	</section>
+	
 	<section><h2>Credits</h2>
 	  <ul class='credits'>
 	    <li><a href='https://www.flickr.com/photos/elena_ri/14752471789/'>Zombies by Elena_Ri</a></li>
@@ -99,8 +103,27 @@
 				]
 			});
 
+      Reveal.addEventListener( 'slidechanged', function( event ) {
+      var graphdiv = document.getElementById('chart');
+      var graph= document.getElementById('fitness');
+      if ( event.indexh === 4 ) {
+      graphdiv.style.left='200px';
+      graphdiv.style.top='100px';			
+      graph.style.width='85%';
+      graph.style.height='500px';
+      }
+      if ( event.indexh === 5 ) {
+      graphdiv.style.left='';
+      graphdiv.style.top='20px';
+      graphdiv.style.right='20px';
+      graph.style.width='240px';
+      graph.style.height='180px';
+      }
+      } );
+      
     </script>
     <script type="text/javascript" src='js/bundle-hiff.js'></script>
+    
 
 </body>
 </html>
