Adds zombies heads

--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,17 @@
 	<section >
 	  <!-- zooms graph -->
 	</section>
+
+	<!-- Reflexionando -->
+	<section>
+	  <section data-background='https://farm9.staticflickr.com/8734/17044577956_f063556272_k_d.jpg' alt='zombies thanks'>
+	    <h1>So thanks for helping!</h1></section>
 	
 	<section><h2>Credits</h2>
 	  <ul class='credits'>
 	    <li><a href='https://www.flickr.com/photos/elena_ri/14752471789/'>Zombies by Elena_Ri</a></li>
 	    <li><a href='https://www.flickr.com/photos/neilconway/3792906411/'>Brains by Neil Conway</a></li>
+	    <li><a href='https://www.flickr.com/photos/andresmusta/17044577956/'>Zombie heads by Andrés Musta</a></li>
 	  </ul>
       </div>
     </div>
