Checking in before reconnecting

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,22 @@
 
     <div class="reveal">
       <div class="slides">
+
+	<section>
+	  <img src='https://upload.wikimedia.org/wikipedia/commons/a/a8/Galaxy_195710.jpg' alt='Galaxy cover with Wolfbane in it'>
+
+	  <aside class='notes'>The idea of people as computing nodes
+	  was, as far as I know, introduced by this, mostly forgotten,
+	  novel from the fifties,
+	  called <a href='https://en.wikipedia.org/wiki/Wolfbane_(novel)'>Wolfbane, by Frederick
+	      Pohl and Cyril Kornbluth</a>,
+	  where humans are linked to a complex
+	    machine and to each other forming <em>snowflakes</em>. No
+	  spoiler, here, but the basic idea is that people were being
+	    used as computing nodes. Just like here</aside>
+	</section>
+
+	<!-- Real entry -->
 	<section>
 	  <h2><code>people_as_computing_nodes.js</code></h2>
 	  <h1><code>@jjmerelo</code></h1>
@@ -80,13 +96,29 @@
 	<!-- Reflexionando -->
 	<section>
 	  <section data-background='https://farm9.staticflickr.com/8734/17044577956_f063556272_k_d.jpg' alt='zombies thanks'>
-	    <h1>So thanks for helping!</h1></section>
-	
+	    <h1>So thanks for helping!</h1>
+	    <h2 class='fragment'>Even if you didn't know you were</h2>
+	  </section>
+
+	  <section data-background='https://farm4.staticflickr.com/3158/2918559666_a8d42b3cb7_b_d.jpg' alt='Asking why'>
+	    <h2>But</h2>
+	    <h1 class='fragment'>why did you do it?</h1>
+
+	    <aside class='notes'>Right answer probably is that most of you did not do it. Even if you have, maybe you have seen your memory consumption going up, your CPU fan fanning or some other thing that has told you uh-oh-what-is-this? </aside>
+	  </section>
+
+	  
+	</section>
+
+	  <!-- Credits -->
 	<section><h2>Credits</h2>
 	  <ul class='credits'>
+	    <li><a href='https://en.wikipedia.org/wiki/Wolfbane_(novel)'>Galaxy
+		cover from Wikipedia</a></li>
 	    <li><a href='https://www.flickr.com/photos/elena_ri/14752471789/'>Zombies by Elena_Ri</a></li>
 	    <li><a href='https://www.flickr.com/photos/neilconway/3792906411/'>Brains by Neil Conway</a></li>
 	    <li><a href='https://www.flickr.com/photos/andresmusta/17044577956/'>Zombie heads by Andrés Musta</a></li>
+	    <li><a href='https://www.flickr.com/photos/benwatts/2918559666/'>Shocked zombie by Ben Watts</a></li>
 	  </ul>
       </div>
     </div>
