Looking for the boarding gate

--- a/public/index.html
+++ b/public/index.html
@@ -113,11 +113,11 @@
 	    <h2 class='fragment'>...just because..</h2>
 	  </section>
 
-	  <section>
+	  <section data-background='https://farm4.staticflickr.com/3277/2975603163_e8e11a7679_b_d.jpg' alt='looking at you'>
 	    <h1>But <strong>you</strong> did it</h1>
 	  </section>
 
-	  <section>
+	  <section data-background='https://farm4.staticflickr.com/3932/14911282444_c531f24520_z_d.jpg' alt='joining the joneses'>
 	    <h1>... Acting as a computing node via your decision</h1>
 	  </section>
 	</section>
@@ -167,6 +167,8 @@
 	    <li><a href='https://www.flickr.com/photos/neilconway/3792906411/'>Brains by Neil Conway</a></li>
 	    <li><a href='https://www.flickr.com/photos/andresmusta/17044577956/'>Zombie heads by Andrés Musta</a></li>
 	    <li><a href='https://www.flickr.com/photos/benwatts/2918559666/'>Shocked zombie by Ben Watts</a></li>
+	    <li><a href='https://www.flickr.com/photos/wigwam/2975603163/'>Wigwam Jones zombie baby</a></li>
+	    <li><a href='https://www.flickr.com/photos/tomhilton/14911282444/'>Zombie Hordes de Tom Hilton</a></li>
 	  </ul>
       </div>
     </div>
