--- a/public/index.html
+++ b/public/index.html
@@ -44,14 +44,14 @@
 	  <img src='https://upload.wikimedia.org/wikipedia/commons/a/a8/Galaxy_195710.jpg' alt='Galaxy cover with Wolfbane in it'>
 
 	  <aside class='notes'>The idea of people as computing nodes
-	  was, as far as I know, introduced by this, mostly forgotten,
+	  was, as far as I know, introduced by this mostly forgotten
 	  novel from the fifties,
 	  called <a href='https://en.wikipedia.org/wiki/Wolfbane_(novel)'>Wolfbane, by Frederick
 	      Pohl and Cyril Kornbluth</a>,
 	  where humans are linked to a complex
-	    machine and to each other forming <em>snowflakes</em>. No
+	    machine and, in ocassions, to each other forming <em>snowflakes</em>. No
 	  spoiler, here, but the basic idea is that people were being
-	    used as computing nodes. Just like here</aside>
+	    used as computing nodes. Just like here. Well, more or less.</aside>
 	</section>
 
 	<!-- Real entry -->
@@ -63,14 +63,17 @@
 	<section><h1>A. K. A.</h1>
 	  <h3><code><a href='https://www.npmjs.com/~jjmerelo'>npmjs.com/~jjmerelo</a></code></h3>
 	  
-	  <h2 class='fragment'><code><a href='https://github.com/JJ'>github.com/JJ</a></code></h3>
+	  <h2 class='fragment'><code><a href='https://github.com/JJ'>github.com/JJ</a></code></h2>
 
 	  <h1><a href='http://ugr.university'>University of Granada, Spain</a></h1>
+
+	  <aside class='notes'>Yep, I got my github ID pretty soon. And you didn't, that's why I get two letters</aside>
+
 	</section>
 
 	<section>
 	  <h1>Visit ⇒</h1>
-	  <h2><code><a href='http://gecco2016-jmerelo.rhcloud.com/'>http://gecco2016-jmerelo.rhcloud.com/</a></code></h2>
+	  <h2><code><a href='http://gecco2016-jmerelo.rhcloud.com/'>gecco2016-jmerelo.rhcloud.com/</a></code></h2>
 	  <h2>Short ⇒<code>goo.gl/LS66vj</code></h2>
 	</section>
 
@@ -81,16 +84,25 @@
 
 	  <section data-background='https://farm4.staticflickr.com/3879/14752471789_8803248026_k_d.jpg' alt='zombies asking for more'>
 	    <h1>We all need more... </h1>
+
+	    <aside class='notes'>And by all I mean at least us, working at the university, who can't pay for computing infrastructure, either virtual of physical. </aside>
 	  </section>
 
 	  <section data-background='https://farm3.staticflickr.com/2503/3792906411_d3f8762924_b_d.jpg' alt='Brains'>
 	    <h1>We all have plenty...</h1>
+
+	    <aside class='notes'>There are lots of computing devices,
+	    sitting there, lots of idle computing cycles up for grabs,
+	      if only somebody could actually come up with a way to leverage them</aside>
 	  </section>
 
 	</section>
 
 	<section >
 	  <!-- zooms graph -->
+	  <aside class='notes'>But that's exactly what we are doing
+	  here. If you're visiting this presentation, you're helping
+	    with an experiment.</aside>
 	</section>
 
 	<!-- Reflexionando -->
