--- a/public/index.html
+++ b/public/index.html
@@ -274,8 +274,66 @@
 	    news in that.</aside>
 	  </section>
 
+	</section>'
+
+	<section>
+	  <section>
+	    <h1>But I <em>want</em> to be a computing node</h1>
+
+	    <aside class='notes'>You've already become part of the
+	    Borg, I mean, Snowflake, we're doing in this room. But you
+	      can help in some other ways</aside>
+	  </section>
+
+	  <section>
+	    <h1>Bioinspired algorithms are tricky</h1>
+
+	    <aside class='notes'>They are good search and optimization
+	    algorithms, but they are not perfect. Maybe the graph over
+	    there is stalled, it's reached a minimum it cannot get out
+	    of. Maybe it's found the solution, hey, so far I haven't
+	      been able to find it, but who knows.</aside>
+	  </section>
+
+	  <section>
+	    <h1><em>You</em> run the meta algorithm</h1>
+
+	    <aside class='notes'>There's not a whole lot you can do,
+	    but you can for instance open it in some other browser,
+	    tell your buddies, or simply F5 the thing, so that it
+	    creates a fresh population and maybe gets out of
+	    stagnation (by killing them all, natch). Even with little
+	    leverage, you evaluate the situation and participate in
+	      the computing system... Unfortunately, only for some
+	    particular kind of algorithms... and only if you offer
+	    visual cues of the algorithm performance. </aside>
+	  </section>
+	  
 	</section>
 
+	<!-- conclusions -->
+	<section>
+	  <section>
+	    <h1>Volunteer computing turns us into computing nodes</h1>
+	  </section>
+
+	  <section>
+	    <h1>Transparency boosts computing power</h1>
+	  </section>
+
+	  <section>
+	    <h1>Visual cues and user leverage enhance algorithm efficacy</h1>
+	  </section>
+	</section>
+
+	<section>
+	  <h1>Thank you very much!</h1>
+	  <h2>Grab this
+	    from <a href='http://github.com/JJ/cloudy-ga-server'>github.com/JJ/cloudy-ga-server</a></h2>
+	  <h2 class='fragment'>Hang in there for experiment
+	    results</h2>
+	</section>
+	
 	  <!-- Credits -->
 	<section><h2>Credits</h2>
 	  <ul class='credits'>
