Off with unused plugins

--- a/public/index.html
+++ b/public/index.html
@@ -334,7 +334,7 @@
 	    results</h2>
 	</section>
 	
-	  <!-- Credits -->
+	<!-- Credits -->
 	<section><h2>Credits</h2>
 	  <ul class='credits'>
 	    <li><a href='https://en.wikipedia.org/wiki/Wolfbane_(novel)'>Galaxy
@@ -343,7 +343,7 @@
 	    <li><a href='https://www.flickr.com/photos/neilconway/3792906411/'>Brains by Neil Conway</a></li>
 	    <li><a href='https://www.flickr.com/photos/andresmusta/17044577956/'>Zombie heads by Andrés Musta</a></li>
 	    <li><a href='https://www.flickr.com/photos/benwatts/2918559666/'>Shocked zombie by Ben Watts</a></li>
-	    <li><a href='https://www.flickr.com/photos/wigwam/2975603163/'>Wigwam Jones zombie baby</a></li>
+	    <li><a href='https://www.flickr.com/photos/wigwam/2975603163/'>Wigwam Jones: zombie baby</a></li>
 	    <li><a href='https://www.flickr.com/photos/tomhilton/14911282444/'>Zombie Hordes de Tom Hilton</a></li>
 	  </ul>
       </div>
@@ -360,8 +360,6 @@
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
