Short URL + CSS

--- a/public/index.html
+++ b/public/index.html
@@ -329,7 +329,7 @@
 	<section>
 	  <h1>Thank you very much!</h1>
 	  <h2>Grab this
-	    from <a href='http://github.com/JJ/cloudy-ga-server'>github.com/JJ/cloudy-ga-server</a></h2>
+	    from <a href='http://github.com/JJ/cloudy-ga-server'><code>git.io/pacn.js</code></a></h2>
 	  <h2 class='fragment'>Hang in there for experiment
 	    results</h2>
 	</section>
