Like, final brushtrokes

--- a/public/index.html
+++ b/public/index.html
@@ -313,23 +313,22 @@
 
 	<!-- conclusions -->
 	<section>
-	  <section>
-	    <h1>Volunteer computing turns us into computing nodes</h1>
+	  <section data-background='https://farm4.staticflickr.com/3947/15012489513_ffd662e64a_b_d.jpg' alt='autumnal zombie'>
+	    <h1>Volunteer computing turns <strong class='hl'>us</strong> into nodes</h1>
 	  </section>
 
-	  <section>
-	    <h1>Transparency boosts computing power</h1>
+	  <section data-background='https://farm2.staticflickr.com/1280/4677264626_c8f30120d9_b_d.jpg' alt='zombie through the looking glass'>
+	    <h1><strong class='hl'>Transparency</strong> boosts computing power</h1>
 	  </section>
 
-	  <section>
-	    <h1>Visual cues and user leverage enhance algorithm efficacy</h1>
+	  <section data-background='https://farm8.staticflickr.com/7450/11884247414_738a948131_k_d.jpg' alt='sign'>
+	    <h1><strong class='hl'>Visual</strong> cues and user leverage enhance algorithm efficiency</h1>
 	  </section>
 	</section>
 
 	<section>
 	  <h1>Thank you very much!</h1>
-	  <h2>Grab this
-	    from <a href='http://github.com/JJ/cloudy-ga-server'><code>git.io/pacn.js</code></a></h2>
+	  <h2>Grab this ☞ <a href='http://github.com/JJ/cloudy-ga-server'><code>git.io/pacn.js</code></a></h2>
 	  <h2 class='fragment'>Hang in there for experiment
 	    results</h2>
 	</section>
@@ -345,6 +344,9 @@
 	    <li><a href='https://www.flickr.com/photos/benwatts/2918559666/'>Shocked zombie by Ben Watts</a></li>
 	    <li><a href='https://www.flickr.com/photos/wigwam/2975603163/'>Wigwam Jones: zombie baby</a></li>
 	    <li><a href='https://www.flickr.com/photos/tomhilton/14911282444/'>Zombie Hordes de Tom Hilton</a></li>
+	    <li><a href='https://www.flickr.com/photos/abject/15012489513/'>Autumnal zombie by Benjamin Lehman</a></li>
+	    <li><a href='https://www.flickr.com/photos/orijinal/4677264626/'>Zombie behind the glass door by Jaysin Trevino</a></li>
+	    <li><a href='https://www.flickr.com/photos/jeepersmedia/11884247414/'>Symbol by Mike Mozart</a></li>
 	  </ul>
       </div>
     </div>
