--- a/public/index.html
+++ b/public/index.html
@@ -322,7 +322,7 @@
 	  </section>
 
 	  <section data-background='https://farm8.staticflickr.com/7450/11884247414_738a948131_k_d.jpg' alt='sign'>
-	    <h1><strong class='hl'>Visual</strong> cues and user leverage enhance algorithm efficiency</h1>
+	    <h1><strong class='hl'>Visual</strong> cues and user leverage boost efficiency</h1>
 	  </section>
 	</section>
 
