Refs #1 several corrections to @iblancasa code

--- a/public/index.html
+++ b/public/index.html
@@ -23,21 +23,24 @@
       </header>
     <section>
       <h2>You are doing science: tell your friends to join!
-        <a id="twitter" class="social" href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fnodio-jmerelo.rhcloud.com%2F&ref_src=twsrc%5Etfw&text=I%20am%20participating%20in%20an%20experiment%20of%20open%20science.%20Join!&tw_p=tweetbutton&url=http%3A%2F%2Fnodio-jmerelo.rhcloud.com%2F">
+        <a id="twitter" class="social" href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fnodio-jmerelo.rhcloud.com%2F&ref_src=twsrc%5Etfw&text=I%20am%20participating%20in%20an%20%23openscience%20experiment.%20Join%20me!&tw_p=tweetbutton&url=http%3A%2F%2Fnodio-jmerelo.rhcloud.com%2F">
         Twitter</a>
         <a id="facebook" class="social" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//nodio-jmerelo.rhcloud.com/">Facebook</a>
         <a id="googleplus" class="social" href="https://plus.google.com/share?url=http%3A//nodio-jmerelo.rhcloud.com/">Google+</a>
-        <a id="linkedin" class="social" href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//nodio-jmerelo.rhcloud.com/&title=Volunteer%20experiment&summary=I%20am%20participating%20in%20an%20experiment%20of%20open%20science.%20Join!&source=">LinkedIn</a>
+        <a id="linkedin" class="social"
+    href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//nodio-jmerelo.rhcloud.com/&title=Volunteer%20experiment&summary=I%20am%20participating%20in%20an%20%23openscience%20experiment.%20Join%20me!&source=">LinkedIn</a>
       </h2>
 
 
     </section>
     <div id='main'>
       <div class='units-row'>
+	<div class='unit-5'></div>
 	<div class='unit-90' id='chart'>
 	  <h2><i class="fa fa-bar-chart"></i> How are we doing</h2>
 	  <canvas id="fitness" style='width:95%;height:80%'></canvas>
 	</div>
+	<div class='unit-5'></div>
       </div>
 
       <div class='units-row'>
