Changes URL refs #1

--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,12 @@
       </header>
     <section>
       <h2>You are doing science: tell your friends to join!
-        <a id="twitter" class="social" href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fnodio-jmerelo.rhcloud.com%2F&ref_src=twsrc%5Etfw&text=I%20am%20participating%20in%20an%20%23openscience%20experiment.%20Join%20me!&tw_p=tweetbutton&url=http%3A%2F%2Fnodio-jmerelo.rhcloud.com%2F">
+        <a id="twitter" class="social" href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fgecco2016-jmerelo.rhcloud.com%2F&ref_src=twsrc%5Etfw&text=I%20am%20participating%20in%20an%20%23openscience%20experiment.%20Join%20me!&tw_p=tweetbutton&url=http%3A%2F%2Fgecco2016-jmerelo.rhcloud.com%2F">
         Twitter</a>
-        <a id="facebook" class="social" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//nodio-jmerelo.rhcloud.com/">Facebook</a>
-        <a id="googleplus" class="social" href="https://plus.google.com/share?url=http%3A//nodio-jmerelo.rhcloud.com/">Google+</a>
+        <a id="facebook" class="social" href="https://www.facebook.com/sharer/sharer.php?u=http%3A//gecco2016-jmerelo.rhcloud.com/">Facebook</a>
+        <a id="googleplus" class="social" href="https://plus.google.com/share?url=http%3A//gecco2016-jmerelo.rhcloud.com/">Google+</a>
         <a id="linkedin" class="social"
-    href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//nodio-jmerelo.rhcloud.com/&title=Volunteer%20experiment&summary=I%20am%20participating%20in%20an%20%23openscience%20experiment.%20Join%20me!&source=">LinkedIn</a>
+    href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//gecco2016-jmerelo.rhcloud.com/&title=Volunteer%20experiment&summary=I%20am%20participating%20in%20an%20%23openscience%20experiment.%20Join%20me!&source=">LinkedIn</a>
       </h2>
 
 
